splitted js and fix buttons events on mobile

--- a/sources/zafira-web/angular/client/styles/layout/test-runs-search.scss
+++ b/sources/zafira-web/angular/client/styles/layout/test-runs-search.scss
@@ -2,8 +2,11 @@
 
 .tests-runs-filter {
     &__search {
-        &-panel-body {
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
             background-color: white;
+            box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
+        &-panel-body {
             padding: 18px 20px 14px 20px;
             @extend %chips-scrolling;
         }
@@ -31,6 +34,10 @@
                 .md-container, .md-icon {
                     width: 18px;
                     height: 18px;
+                }
+                @media (max-width: 1279px) {
+                    margin-left: 12px;
+                    margin-right: 7px;
                 }
             }
             .reviewed {
@@ -190,6 +197,9 @@
     }
     @media screen and (max-width: $breakpoint-mobile) {
         &__search {
+            border: transparent;
+            box-shadow: none;
+            border-radius: 0;
             &-panel {
                 &._row-wrapper {
                     overflow: hidden;
@@ -207,6 +217,9 @@
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
                 box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2);
+                md-checkbox {
+                    display: none;
+                }
                 .reviewed {
                     margin-right: 16px;
                 }
